--- a/package.json
+++ b/package.json
@@ -1,1 +1,19 @@
-git add
+{
+  "name": "celsodev",
+  "version": "1.0.0",
+  "description": "testcommit",
+  "main": "index.js",
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/brcelso/celsodev.git"
+  },
+  "author": "",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/brcelso/celsodev/issues"
+  },
+  "homepage": "https://github.com/brcelso/celsodev#readme"
+}
